--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,22 @@
 apply plugin: 'com.android.application'
 
+def getServiceProperty(String property) {
+    Properties properties = new Properties();
+    properties.load(new FileInputStream("../../services/yummly.properties"));
+    return String.format("\"%s\"", properties.getProperty(property));
+}
+
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "edu.cnm.deepdive.foodrandom"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "API_KEY", getServiceProperty("api_key")
+        buildConfigField "String", "APP_ID", getServiceProperty("app_id")
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
@@ -20,6 +28,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
     }
 }
 
@@ -36,6 +48,7 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.google.android.gms:play-services-plus:16.0.0'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
+    implementation 'com.android.volley:volley:1.0.0'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
