--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
   <uses-permission android:name="android.permission.INTERNET"/>
 
   <application
-    android:allowBackup="true"
+    android:name=".FoodApplication"
+    android:allowBackup="false"
+    android:usesCleartextTraffic="true"
     android:icon="@mipmap/rf"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
